header element fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
 
-        <section>
+        <nav>
             <div class="flex-1">
                 <h2>Fajtái</h2>
                 <p id="max-width-80">Öt faját, de sok változattal termesztik szerte a világon</p>
@@ -26,7 +26,7 @@
                     <li><a href="https://wikipedia.hu">Szőrös paprika</a></li>
                 </ol>
             </div>
-        </section>
+        </nav>
 
         <div class="flex-2">
             <section>
